<resources>
    <string name="app_name">Operaciones</string>
    <string name="titulo">TÍTULO</string>
    <string name="resultado">Resultado</string>
    <string name="primer_numero">Primer Número</string>
    <string name="segundo_numero">Segundo Número</string>
    <string name="calcular">CALCULAR</string>
    <string name="borrar">BORRAR</string>
    <string name="mensaje_error_uno">Digite el numero uno</string>
    <string name="mensaje_error_dos">Digite el numero dos</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="division">Division</string>
    <string-array name="operaciones">
        <item>@string/suma</item>
        <item>@string/resta</item>
        <item>@string/multiplicacion</item>
        <item>@string/division</item>
    </string-array>
    <string name="mensaje_error_tres">No sea bruto, no puede dividir entre cero</string>

</resources>
